# OfoghProject

./: Dockerfile  README.md  pyproject.toml
ofogh_test_project/: manage.py
ofogh_test_project/Drivers/: apps.py  models.py  serializers.py  views.py
ofogh_test_project/Drivers/migrations/: 0001_initial.py
ofogh_test_project/Network/: models.py  serializers.py  views.py
ofogh_test_project/Stations/: apps.py  models.py  serializer.py  views.py
ofogh_test_project/ofogh_test_project/: asgi.py  settings.py  urls.py  wsgi.py
